--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Khiati Abdel-ilah Zakaria</title>
-  <meta name="description" content="Khiati Zakaria's homepage">
-
-  <link href="./css/github-light.css" rel="stylesheet">
+  <title>Daniel Hermosillo</title>
   <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
